Keep config command contract test Java 8 compatible