@@ -3,7 +3,8 @@ package xin.vanilla.aotake.command;
 import org.junit.Test;
 
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Paths;
 
 import static org.junit.Assert.assertEquals;
 
@@ -11,8 +12,8 @@ public class ConfigCommandStructureTest {
 
     @Test
     public void exposesCommonConfigOnlyOnce() throws Exception {
-        String source = Files.readString(Path.of(
-                "src/main/java/xin/vanilla/aotake/command/impl/ConfigCommand.java"));
+        String source = new String(Files.readAllBytes(Paths.get(
+                "src/main/java/xin/vanilla/aotake/command/impl/ConfigCommand.java")), StandardCharsets.UTF_8);
 
         assertEquals(1, occurrences(source, "Commands.literal(\"common\")"));
         assertEquals(0, occurrences(source, "Commands.literal(\"server\")"));
